chore: update multiple files in hive module without content changes